Fix overlapping GroceryList and Footer in mobile and tablet view

--- a/cookbook/src/Styles/less/grocery-list.less
+++ b/cookbook/src/Styles/less/grocery-list.less
@@ -4,19 +4,19 @@
   flex-wrap: wrap;
   color: @CBblue;
   font-weight: 600;
-  height: 690px;
+  // height: 690px;
   // margin-bottom: 200px;
-  @media @desktop {
-    height: 600px;
-  }
+  // @media @desktop {
+  //   height: 600px;
+  // }
   @media @tablet {
     justify-content: center;
-    height: 900px;
+    // height: 900px;
   }
   @media @phone {
     padding-top: 0;
     align-items: flex-start;
-    height: 700px;
+    // height: 700px;
   }
 
   .gen-list-container {
@@ -77,6 +77,7 @@
         font-size: 1.6rem;
         border-radius: 15px;
         padding: 2px 15px;
+        border: 2px solid @CBblue;
         @media @desktop {
           left: 340px;
           line-height: 2rem;
@@ -106,6 +107,7 @@
         font-size: 1.6rem;
         border-radius: 15px;
         padding: 2px 15px;
+        border: 2px solid @CBblue;
         @media @desktop {
           left: 420px;
           line-height: 2rem;
@@ -277,7 +279,6 @@
     @media @phone {
       width: 350px;
       font-size: 1.2rem;
-      position: absolute;
       top: 570px;
     }
 
@@ -350,6 +351,7 @@
     .scroll-container {
       height: 585px;
       overflow: auto;
+      margin-bottom: 30px;
 
       &::-webkit-scrollbar {
         width: 12px;
@@ -371,7 +373,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        padding: 11px 0 15px;
+        padding: 11px 0 5px;
         padding-top: 5px;
         margin-top: 5px;
       }
