--- a/cookbook/src/Styles/less/index.less
+++ b/cookbook/src/Styles/less/index.less
@@ -8,16 +8,11 @@ html,
 body {
   margin: 0;
   padding: 0;
-
-  .portal {
-    .modal-portal {
-      border: 2px solid red;
-    }
-  }
 }
 
 * {
   box-sizing: border-box;
+  outline: none;
 }
 
 @import "variables.less";
